# MyPokerSolver

./: .gitignore  package-lock.json
poker-app/: README.md
poker-app/backend/: pyproject.toml
poker-app/backend/app/: main.py  models.py
poker-app/backend/app/equity/: deck.py  engines.py  evaluator.py  ranges.py
poker-app/backend/app/tests/: test_smoke.py
poker-app/frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
poker-app/frontend/src/app/: globals.css  layout.tsx  page.tsx
poker-app/frontend/src/components/: AllSeatEditors.tsx  BoardInput.tsx  CircleTable.tsx  EquitySummary.tsx  PlayerRangeCard.tsx  RangeBreakdown.tsx  RangeEditorDialog.tsx  RangeMatrix.tsx  SeatCard.tsx  SeatName.tsx  StreetControls.tsx  TableOval.tsx  TopBar.tsx
poker-app/frontend/src/lib/: api.ts  rangeUtils.ts  seats.ts
poker-app/frontend/src/store/: useTableStore.ts
poker-app/frontend/src/types/: index.ts
